chapter_06/gatekeeper/pod_resource_requests_limits/test_pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: test-pod 
spec: 
  containers: 
  - name: test-container 
    image: nginx
