chapter_06/gatekeeper/pod_resource_requests_limits/pod_resource_limits_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1 
kind: K8sPodResourceLimits 
metadata: 
  name: pod-resource-limits 
spec: 
  match: 
    kinds: 
      - apiGroups: [""] 
        kinds: ["Pod"]
